--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_info.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_info.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical"
 
     android:background="@color/whiteColor">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:background="@color/appMainColor"
         >
         <android.support.constraint.ConstraintLayout
@@ -63,55 +64,64 @@
                     />
             </FrameLayout>
 
-    </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
     </FrameLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
+
+    <ScrollView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
-        <com.example.yoonsung.nowsale.pageAdapter.MeasuredViewPager
-            class="android.support.v4.view.ViewPager"
+        android:fillViewport="true">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/view"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            />
-        <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabBackground="@drawable/indicator_selector"
-            app:tabGravity="center"
-            app:tabIndicatorHeight="0dp"
-            android:layout_gravity="bottom"
-            android:id="@+id/tab_layout" />
-    </FrameLayout>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.yoonsung.nowsale.activity.OwnerInfoActivity">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/ownerInfoTabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:minHeight="?attr/actionBarSize"
-            app:tabMode="fixed"/>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/ownerInfoPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
+            android:orientation="vertical">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:id="@+id/frame"
+                android:layout_above="@id/linear"
+                >
+                <com.example.yoonsung.nowsale.pageAdapter.MeasuredViewPager
+                    class="android.support.v4.view.ViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:id="@+id/view"
+                    />
+                <android.support.design.widget.TabLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabBackground="@drawable/indicator_selector"
+                    app:tabGravity="center"
+                    app:tabIndicatorHeight="0dp"
+                    android:layout_gravity="bottom"
+                    android:id="@+id/tab_layout" />
+            </FrameLayout>
 
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/linear"
+                >
 
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/ownerInfoTabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#ffffff"
+                    android:minHeight="?attr/actionBarSize"
+                    app:tabMode="fixed"/>
+
+                <com.example.yoonsung.nowsale.pageAdapter.MeasuredViewPager
+                    android:id="@+id/ownerInfoPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
