--- a/NowSaleAndroidApp/app/src/main/res/layout/owner_info_tab_fragment_1.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/owner_info_tab_fragment_1.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-
     android:background="#ffffffff">
 
     <ScrollView
@@ -15,7 +13,7 @@
         android:id="@+id/scrollView">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -70,7 +68,7 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
 
 
             <com.nhn.android.maps.NMapView
